--- a/style.css
+++ b/style.css
@@ -36,11 +36,7 @@ body {
   cursor: pointer;
   display: block;
   color: #333333;
-  background-color: #e5e5e5;
   text-decoration: none;
-}
-#wrapper .step-app > .step-steps > li:hover {
-  background-color: #dddddd;
 }
 #wrapper .step-app > .step-steps > li.done {
   padding: 0;
@@ -133,7 +129,7 @@ body {
 #wrapper .step-app > .step-content {
   border: 1px solid #e5e5e5;
   padding: 10px;
-  border-top: 0;
+  margin-top: 10px;
 }
 #wrapper .step-app > .step-content > .step-tab-panel {
   display: none;
@@ -240,7 +236,6 @@ body {
   padding: 13px 16px;
   width: 100%;
   box-sizing: border-box;
-  border-radius: 5px;
   border: 1px solid silver;
   margin: 5px 0;
 }
@@ -270,7 +265,6 @@ body {
   padding: 13px 16px;
   text-decoration: none;
   background: rgb(9, 9, 122);
-  border-radius: 5px;
   color: white;
   border: none;
   outline: none;
