--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   max-width: 1370px;
   margin: 0 auto;
   display: flex;
-  gap: 10px;
+  gap: 40px;
   justify-content: center;
   padding: 20px 50px;
 }
@@ -20,8 +20,8 @@ body {
   padding: 10px;
   flex: 1;
   background-color: white;
-  border-radius: 8px;
-  box-shadow: 0 4px 25px 0 rgb(0 0 0 / 10%);
+  /* box-shadow: 0 0 0.1cm rgba(0,0,0,0.5); */
+  /* box-shadow: 0 4px 25px 0 rgb(0 0 0 / 10%); */
 }
 #wrapper h1 {
   text-align: center;
@@ -275,6 +275,7 @@ body {
   border: none;
   outline: none;
   cursor: pointer;
+  border-radius: 4px;
   transition: all 0.3s;
 }
 
@@ -290,22 +291,23 @@ body {
                     Display Section
 ******************************************************/
 #wrapper .display-wrapper {
-  /* border: 1px solid red; */
+  box-shadow: 0 4px 25px 0 rgb(0 0 0 / 10%);
+  border: 1px solid rgba(0,0,0,0.2);
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: flex-start;
   padding: 3rem;
+  background-color:#FFFFFF;
 }
 #wrapper .display-wrapper .step-content h2 {
-  font-size: 28px;
+  font-size: 20px;
   font-weight: normal;
 }
 
 #wrapper .display-wrapper .step-content section .form-text p {
-  font-size: 25px;
+  font-size: 18px;
   font-weight: 300;
-  /* text-align: center; */
 }
 
 #wrapper .display-wrapper .step-content section .form-text p span {
