--- a/style.css
+++ b/style.css
@@ -396,7 +396,7 @@ body {
   color: #ffffff;
 }
 /* Step 5 */
-#wrapper .step-app .step-content .step-tab-panel #dynamic-definition-forms hr {
+#wrapper .step-app .step-content .step-tab-panel #dynamic-definition-form hr {
   margin-top: 30px;
 }
 #wrapper .step-app .step-content .step-tab-panel button.definitionaddbtn {
@@ -410,7 +410,7 @@ body {
   .step-app
   .step-content
   .step-tab-panel
-  #dynamic-definition-forms
+  #dynamic-definition-form
   button.removebtn {
   padding: 6px 12px;
   background-color: #dc3545;
